Working on implementing registration

--- a/Matricks/ClientApp/src/app/register/register.component.html
+++ b/Matricks/ClientApp/src/app/register/register.component.html
@@ -2,7 +2,7 @@
 <br />
 <br />
 <div style="text-align:center" width="500px">
-  <form class="form-signin" #loginForm="ngForm" (ngSubmit)="login()">
+  <form class="form-signin" #loginForm="ngForm" (ngSubmit)="register()">
     <!--<img class="mb-4" src="http://hddfhm.com/images/clipart-msn-10.png" alt="" width="72" height="72">-->
     <h1 class="h3 mb-3 font-weight-normal">Sign Up</h1>
     <!--<label for="inputEmail" class="sr-only">Username</label>-->
