--- a/Matricks/ClientApp/src/app/nav/nav.component.html
+++ b/Matricks/ClientApp/src/app/nav/nav.component.html
@@ -24,9 +24,9 @@
         </div>
       </li>-->
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Username" aria-label="Search">
-      <input class="form-control mr-sm-2" type="text" placeholder="Password" aria-label="Search">
+    <form class="form-inline my-2 my-lg-0" #navForm="ngForm" (ngSubmit)="login()">
+      <input class="form-control mr-sm-2" type="text" placeholder="Username" aria-label="Search" required name="username" [(ngModel)]="model.username">
+      <input class="form-control mr-sm-2" type="password" placeholder="Password" aria-label="Search" required name="password" [(ngModel)]="model.password">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Log-in</button>
     </form>
   </div>
