--- a/Matricks/ClientApp/src/app/register/register.component.html
+++ b/Matricks/ClientApp/src/app/register/register.component.html
@@ -2,7 +2,7 @@
 <br />
 <br />
 <div style="text-align:center" width="500px">
-  <form class="form-signin" #loginForm="ngForm" (ngSubmit)="Register()">
+  <form class="form-signin" #registerForm="ngForm" (ngSubmit)="register()">
     <!--<img class="mb-4" src="http://hddfhm.com/images/clipart-msn-10.png" alt="" width="72" height="72">-->
     <h1 class="h3 mb-3 font-weight-normal">Sign Up</h1>
     <!--<label for="inputEmail" class="sr-only">Username</label>-->
@@ -10,12 +10,7 @@
     <!--<label for="inputPassword" class="sr-only">Password</label>-->
     <input type="password" id="inputPassword" class="form-control" placeholder="Password" required name="password" [(ngModel)]="model.password">
     <!--<!--<label for="inputPassword" class="sr-only">Password</label>-->
-    <input type="password" id="inputConfirm" class="form-control" placeholder="Confirm Password" required name="confirmPassword" [(ngModel)]="model.confirmPassword">
-    <!--<div class="checkbox mb-3">
-      <label>
-        <input type="checkbox" value="remember-me"> Remember me
-      </label>
-    </div>-->
+    <!--<input type="password" id="inputConfirm" class="form-control" placeholder="Confirm Password" required name="confirmPassword" [(ngModel)]="model.confirmPassword">-->
     <button class="btn btn-lg btn-primary btn-block" type="submit" [disabled]="!loginForm.valid">Register</button>
     <button class="btn btn-lg btn-primary btn-block" type="button">Cancel</button>
     <p class="mt-5 mb-3 text-muted">© 2017-2018</p>
