--- a/Matricks/ClientApp/src/app/nav/nav.component.html
+++ b/Matricks/ClientApp/src/app/nav/nav.component.html
@@ -1,8 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="#">The Matrix</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" (click)="isCollapsed = !isCollapsed" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
+
 
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
@@ -15,14 +16,14 @@
       <li class="nav-item">
         <a class="nav-link" href="#">Messages</a>
       </li>
-      <!--<li class="nav-item dropdown">
+      <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-        <div class="dropdown-menu" aria-labelledby="dropdown01">
+        <div class="dropdown-menu" aria-labelledby="dropdown01" [collapse]="isCollapsed">
           <a class="dropdown-item" href="#">Action</a>
           <a class="dropdown-item" href="#">Another action</a>
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
-      </li>-->
+      </li>
     </ul>
     <form class="form-inline my-2 my-lg-0" #navForm="ngForm" (ngSubmit)="login()">
       <input class="form-control mr-sm-2" type="text" placeholder="Username" aria-label="Search" required name="username" [(ngModel)]="model.username">
